# School42

./: .gitignore  .gitmodules  42.code-workspace  Desktop.code-workspace  Makefile  PATH.txt  README.md  README.md.gpg  a.out  circularBuffer.c  cub3D  file.txt  flood_fill.c  ft_split_2.c  generate_and_extract_suppressions.py  l.c  leak_test.sh  linkedlist.c  mandelbroat.txt  out  playground.c  practice  practice.c  practice.cu  sort_list.c  suppressions.supp  tasks.json  test_maps.sh  valgrind-out.txt
-/: README.md  binary_dump.txt  execute_maps.sh  generate_and_extract_suppressions.py  hex_dump.txt  path_generator.py  suppressions.supp
.github/workflows/: error_tracking.yml
42/: .gitignore
School42/playground/: compile_and_run_asm.sh  practice.asm  practice.c  practice.py
cub3d/: cub3D
cub3d/include/: cub3d.h  (+2 more)
include/: cub3d.h  player.h  render.h
maincourse/: .gitignore  main.c
maps/: map.cub
playground/: README.md.gpg  a.out  client  complex_num_noheader.c  criterion.md  execve.c  export.c  mandelbroat.c  mandelbrot.c  mandelbrot_dynamic.c  memcpy-memmove-strlcpy-strlcat.c  memcpyVSmemmove.c  newton.py  play.c  play.cpp  play.py  printAddresses.c  printf.c  regex.c  server  server.c  socket.c  socket_client.c  traverseArrayString.c
specialization/PythonForDataScience/python-0/ex09/: LICENSE  README.md  pyproject.toml  tester.py
specialization/PythonForDataScience/python-0/ex09/ft_package/: README.md  __init__.py  module2.py  pyproject.toml
specialization/PythonForDataScience/python-0/ex09/ft_package/ft_package/: module1.py
src/: main.c  map.cub
(+2055 files in other folders)
